syntax = "proto3";

package maple2.server.world.service;

import "google/protobuf/empty.proto";
import "common.proto";
import "sync.proto";

// The world service definition.
service World {
  // Migrate out of a server.
  rpc MigrateOut(MigrateOutRequest) returns (MigrateOutResponse);
  // Migrate into a server.
  rpc MigrateIn(MigrateInRequest) returns (MigrateInResponse);
  // Cross field
  rpc Field(maple2.FieldRequest) returns (maple2.FieldResponse);
  // Retrieve information about channels.
  rpc Channels(ChannelsRequest) returns (ChannelsResponse);
  // Send a chat message.
  rpc Chat(maple2.ChatRequest) returns (maple2.ChatResponse);
  // Manage buddy list.
  rpc Buddy(maple2.BuddyRequest) returns (maple2.BuddyResponse);
  // Manage guild.
  rpc GuildInfo(GuildInfoRequest) returns (GuildInfoResponse);
  rpc Guild(GuildRequest) returns (GuildResponse);
  // Manage party.
  rpc PartyInfo(PartyInfoRequest) returns (PartyInfoResponse);
  rpc Party(PartyRequest) returns (PartyResponse);
  rpc PartySearchInfo(PartySearchInfoRequest) returns (PartySearchInfoResponse);
  rpc PartySearch(PartySearchRequest) returns (PartySearchResponse);
  // Manage club.
  rpc ClubInfo(maple2.ClubInfoRequest) returns (maple2.ClubInfoResponse);
  rpc Club(ClubRequest) returns (ClubResponse);
  // Manage group chat.
  rpc GroupChatInfo(GroupChatInfoRequest) returns (GroupChatInfoResponse);
  rpc GroupChat(GroupChatRequest) returns (GroupChatResponse);
  // Retrieve player info from online player.
  rpc PlayerInfo(maple2.PlayerInfoRequest) returns (maple2.PlayerInfoResponse);
  rpc AccountInfo(maple2.PlayerInfoRequest) returns (maple2.PlayerInfoResponse);
  // Update player info
  rpc UpdatePlayer(maple2.PlayerUpdateRequest) returns (maple2.PlayerUpdateResponse);
  // Notify character about new mail.
  rpc MailNotification(maple2.MailNotificationRequest) returns (maple2.MailNotificationResponse);
  // Daily/weekly resets
  rpc GameReset(maple2.GameResetRequest) returns (maple2.GameResetResponse);
  // Black Market
  rpc BlackMarket(BlackMarketRequest) returns (BlackMarketResponse);
  // Time Events
  rpc TimeEvent(TimeEventRequest) returns (TimeEventResponse);
  // Add channel
  rpc AddChannel(AddChannelRequest) returns (AddChannelResponse);
  // Marriage
  rpc Marriage(maple2.MarriageRequest) returns (maple2.MarriageResponse);
  // PlayerWarp
  rpc PlayerWarp(maple2.PlayerWarpRequest) returns (maple2.PlayerWarpResponse);
  // Admin
  rpc Admin(maple2.AdminRequest) returns (maple2.AdminResponse);
  // Buff
  rpc PlayerConfig(PlayerConfigRequest) returns (PlayerConfigResponse);
  // Disconnect
  rpc Disconnect(maple2.DisconnectRequest) returns (maple2.DisconnectResponse);
}

enum Server {
  LOGIN = 0;
  GAME = 1;
}

message MigrateOutRequest {
  int64 account_id = 1;
  int64 character_id = 2;
  string machine_id = 3;
  Server server = 4;

  // If channel is not specified, one will be determined by the world server.
  optional int32 channel = 5;
  optional bool instanced_content = 6;

  optional int32 map_id = 7;
  optional int32 portal_id = 8;
  optional int64 owner_id = 9;
  optional int32 room_id = 10;
  optional float position_x = 11;
  optional float position_y = 12;
  optional float position_z = 13;
  optional MigrationType type = 14;
}

enum MigrationType {
  NORMAL = 0;
  DECOR_PLANNER = 1;
  BLUEPRINT_DESIGNER = 3;
  DUNGEON = 4;
}

message MigrateOutResponse {
  string ip_address = 1;
  int32 port = 2;
  int32 channel = 3;
  fixed64 token = 4;
}

message MigrateInRequest {
  int64 account_id = 1;
  fixed64 token = 3;
  string machine_id = 4;
  int32 channel = 5;
  int32 map_id = 6;
  int64 owner_id = 7;
}

message MigrateInResponse {
  int64 character_id = 1;
  int32 channel = 2;
  int32 map_id = 3;
  int32 portal_id = 4;
  int64 owner_id = 5;
  int32 room_id = 6;
  float position_x = 7;
  float position_y = 8;
  float position_z = 9;
  MigrationType type = 10;
}

message ChannelsRequest {}

message ChannelsResponse {
  repeated int32 channels = 1;
}

message GuildInfo {
  message Member {
    int64 character_id = 1;
    string message = 2;
    int32 rank = 3;
    int64 join_time = 4;
    int64 login_time = 5;
    int64 checkin_time = 6;
    int64 donation_time = 7;
    int32 weekly_contribution = 8;
    int32 total_contribution = 9;
    int32 daily_donation_count = 10;
  }
  message Rank {
    string name = 1;
    int32 permission = 2;
  }
  message Buff {
    int32 id = 1;
    int32 level = 2;
    int64 expiry_time = 3;
  }
  message Poster {
    int32 id = 1;
    string picture = 2;
    int64 owner_id = 3;
    string owner_name = 4;
    int64 resource_id = 5;
  }
  message Npc {
    int32 type = 1;
    int32 level = 2;
  }

  int64 id = 1;
  string name = 2;
  string emblem = 3;
  string notice = 4;
  int64 creation_time = 5;
  int32 focus = 6;
  int32 experience = 7;
  int32 funds = 8;
  int32 house_rank = 9;
  int32 house_theme = 10;

  repeated Member members = 11;
  repeated Rank ranks = 12;
  repeated Buff buffs = 13;
  // events
  repeated Poster posters = 15;
  repeated Npc npcs = 16;
  // bank
}

message GuildInfoRequest {
  int64 guild_id = 1;
}

message GuildInfoResponse {
  optional GuildInfo guild = 1;
}

message GuildRequest {
  message Create {
    string guild_name = 1;
  }
  message Disband {
    int64 guild_id = 1;
  }
  message Invite {
    int64 guild_id = 1;
    int64 receiver_id = 2;
  }
  message RespondInvite {
    int64 guild_id = 1;
    bool accepted = 2;
  }
  message Leave {
    int64 guild_id = 1;
  }
  message Expel {
    int64 guild_id = 1;
    int64 receiver_id = 2;
  }
  message UpdateMember {
    int64 guild_id = 1;
    int64 character_id = 2;
    optional int32 rank = 3;
    optional string message = 4;
  }
  message CheckIn {
    int64 guild_id = 1;
  }
  message UpdateLeader {
    int64 guild_id = 1;
    int64 leader_id = 2;
  }
  message UpdateNotice {
    int64 guild_id = 1;
    string message = 2;
  }
  message UpdateEmblem {
    int64 guild_id = 1;
    string emblem = 2;
  }
  message UpdatePoster {
    int64 guild_id = 1;
    int32 id = 2;
    string picture = 3;
    int64 owner_id = 4;
    string owner_name = 5;
    int64 resource_id = 6;
  }

  int64 requestor_id = 4;
  oneof guild {
    Create create = 1;
    Disband disband = 2;
    Invite invite = 3;
    RespondInvite respond_invite = 5;
    Leave leave = 7;
    Expel expel = 8;
    UpdateMember update_member = 9;
    CheckIn check_in = 10;
    UpdateLeader update_leader = 11;
    UpdateNotice update_notice = 12;
    UpdateEmblem update_emblem = 13;
    UpdatePoster update_poster = 14;
  }
}

message GuildResponse {
  oneof Info {
    int64 guild_id = 1;
    GuildInfo guild = 2;
  }

  int32 error = 4;
}

message GroupChatInfoRequest {
  optional int32 group_chat_id = 1;
  optional int64 character_id = 2;
}

message GroupChatInfoResponse {
  repeated GroupChatInfo infos = 3;
}

message PartyInfo {
  message Member {
    int64 character_id = 1;
    int64 join_time = 2;
  }

  int32 id = 1;
  int64 leader_account_id = 2;
  int64 leader_character_id = 3;
  string leader_name = 4;
  int64 creation_time = 5;
  optional bool dungeon_set = 6;
  optional int32 dungeon_id = 7;
  optional int32 dungeon_room_id = 8;
  optional string match_party_name = 9;
  optional int32 match_party_id = 10;
  optional bool is_matching = 11;
  optional bool require_approval = 12;
  repeated Member members = 13;
  optional PartySearchInfo party_search = 14;
}

message PartyInfoRequest {
  optional int32 party_id = 1;
  optional int64 character_id = 2;
}

message PartyInfoResponse {
  optional PartyInfo party = 1;
}

message PartyRequest {
  message Create {}

  message Disband {
    int32 party_id = 1;
  }
  message Invite {
    int32 party_id = 1;
    int64 receiver_id = 2;
  }
  message RespondInvite {
    int32 party_id = 1;
    int32 reply = 2;
  }
  message Leave {
    int32 party_id = 1;
  }
  message Kick {
    int32 party_id = 1;
    int64 receiver_id = 2;
  }
  message UpdateLeader {
    int32 party_id = 1;
    optional int64 character_id = 2;
  }
  message ReadyCheck {
    int32 party_id = 1;
  }
  message VoteReply {
    int32 party_id = 1;
    bool reply = 2;
  }
  message VoteKick {
    int32 party_id = 1;
    int64 target_user_id = 2;
  }
  message JoinByPartySearch {
    int64 party_search_id = 1;
    int32 party_id = 2;
  }
  message SetDungeon {
    int32 party_id = 1;
    int32 dungeon_id = 2;
    int32 dungeon_room_id = 3;
    bool set = 4;
  }

  int64 requestor_id = 1;
  oneof party {
    Create create = 2;
    Disband disband = 3;
    Invite invite = 4;
    RespondInvite respond_invite = 5;
    Leave leave = 6;
    Kick kick = 7;
    UpdateLeader update_leader = 8;
    ReadyCheck ready_check = 9;
    VoteReply vote_reply = 10;
    VoteKick vote_kick = 11;
    JoinByPartySearch join_by_party_search = 12;
    SetDungeon set_dungeon = 13;
  }
}

message PartyResponse {
  oneof Info {
    int32 party_id = 1;
    PartyInfo party = 2;
  }

  int32 error = 3;
}

message ClubRequest {
  message Create {
    string club_name = 1;
  }

  message NewClubInvite {
    int64 club_id = 1;
    int64 receiver_id = 2;
    int32 reply = 3;
  }

  message Leave {
    int64 club_id = 1;
  }

  message Invite {
    int64 club_id = 1;
    int64 receiver_id = 2;
  }

  message RespondInvite {
    int64 club_id = 1;
    bool accept = 2;
  }

  message Rename {
    int64 club_id = 1;
    string name = 2;
  }

  int64 requestor_id = 1;
  oneof club {
    Create create = 2;
    NewClubInvite new_club_invite = 3;
    Leave leave = 4;
    Invite invite = 5;
    RespondInvite respond_invite = 6;
    Rename rename = 7;
  }
}

message ClubResponse {
  oneof Info {
    int64 club_id = 1;
    ClubInfo club = 2;
  }

  int32 error = 3;
}

message BlackMarketRequest {
  message Add {
    int64 listing_id = 1;
  }

  message Remove {
    int64 listing_id = 1;
  }

  message Purchase {
    int64 listing_id = 1;
    int64 seller_id = 3;
  }

  message Search {
    repeated string categories = 1;
    int32 min_level = 2;
    int32 max_level = 3;
    int32 job_flag = 4;
    int32 rarity = 5;
    int32 min_enchant_level = 6;
    int32 max_enchant_level = 7;
    int32 min_socket_count = 8;
    int32 max_socket_count = 9;
    string name = 10;
    int32 start_page = 11;
    int32 sort_by = 12;
    repeated StatOption stat_options = 13;
  }

  oneof black_market {
    Add add = 1;
    Search search = 2;
    Remove remove = 3;
    Purchase purchase = 4;
  }
}

message BlackMarketResponse {
  message Search {
    repeated int64 listing_ids = 1;
  }

  oneof BlackMarket {
    Search search = 1;
  }
  int32 error = 2;
}

message StatOption {
  int32 stat_id = 1;
  int32 value = 2;
}

message TimeEventRequest {
  message JoinGlobalPortal {
    int32 event_id = 1;
    int32 index = 2;
  }

  message GetGlobalPortal {}

  oneof TimeEvent {
    JoinGlobalPortal join_global_portal = 1;
    GetGlobalPortal get_global_portal = 2;
  }
}

message TimeEventResponse {
  oneof Info {
    GlobalPortalInfo global_portal_info = 1;
  }
  int32 error = 2;
}

message GlobalPortalInfo {
  int32 event_id = 1;
  int32 metadata_id = 2;
  int32 channel = 3;
  int32 room_id = 4;
  int32 map_id = 5;
  int32 portal_id = 6;
}

message AddChannelRequest {
  string game_ip = 1;
  string grpc_game_ip = 2;
  bool instanced_content = 3;
}

message AddChannelResponse {
  int32 game_port = 1;
  int32 grpc_port = 2;
  int32 game_channel = 3;
}

message PlayerConfigRequest {
  message Save {
    repeated BuffInfo buffs = 1;
    repeated SkillCooldownInfo skill_cooldowns = 2;
    DeathInfo death_info = 3;
  }

  message Get { }

  int64 requester_id = 1;
  oneof player_config {
    Save save = 2;
    Get get = 3;
  }
}

message PlayerConfigResponse {
  repeated BuffInfo buffs = 1;
  repeated SkillCooldownInfo skill_cooldowns = 2;
  DeathInfo death_info = 3;
}

message BuffInfo {
  int32 id = 1;
  int32 level = 2;
  int32 ms_remaining = 3;
  int64 stop_time = 4;
  bool enabled = 5;
  int32 stacks = 6;
}

message SkillCooldownInfo {
  int32 skill_id = 1;
  int32 skill_level = 2;
  int32 group_id = 3;
  int32 ms_remaining = 4;
  int64 stop_time = 5;
  int32 charges = 6;
}

message DeathInfo {
  int32 count = 1;
  int32 ms_remaining = 2;
  int64 stop_time = 3;
}
